ipc/ipdl/test/ipdl/error/structRedecl.ipdl
//error: redeclaration of symbol `a', first declared at

struct Redecl {
    int a;
    double a;
};

protocol structRedecl {
child: async __delete__();
};
